--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=tienda
 server.port=80
 
-# MySQL conexión local 
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop
+## MySQL conexión local
+#spring.datasource.url=jdbc:mysql://localhost:3306/techshop
+
+# MySQL conexión local
+spring.datasource.url=jdbc:mysql://techshop-cuentaprivada0807-bb30.b.aivencloud.com:23914/techshop
 
 # Datos genéricos de la conexión
 spring.datasource.username=usuario_prueba
@@ -14,3 +17,14 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+
+#Propiedades para enviar correos
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cuentaprivada0807@gmail.com
+spring.mail.password=caeebvfmfgbsoxdm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Se indica el servidor donde corre la tienda
+servidor.http=localhost
